src/ui/snapshots/cornercase__ui__changes__tests__filter__an_empty_field_shows_how_to_filter.snap
---
source: src/ui/changes.rs
assertion_line: 845
expression: "render(&filtered(&sample(), \"\"), None).backend()"
---
"  Uncommitted   Commits   All                         ⌕  ×  "
"  ⌕ path, *.test.js, !*.snap                             ×  "
" 3 files  +7 −3  ▃▃▃▃▃▃▃▃                            ● live "
"                                                            "
" ▌▾ M src/returns.rs                               +5 −2    "
" ┄┄ impl Address ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"   9   9   /// The first line, when the address has one.    "
"  10     ▎ pub fn street(parts: &[String]) -> &str {        "
"  11     ▎     parts.first().unwrap()                       "
"      10 ▎ pub fn street(parts: &[String]) -> Option<&str>… "
"      11 ▎     parts.first().map(String::as_str)            "
"  12  12   }                                                "
"         ↕ 31 unchanged lines                               "
" ┄┄ mod tests ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"  44  44       }                                            "
"      45 ▎                                                  "
"      46 ▎     #[test]                                      "
"      47 ▎     fn empty_address_is_rejected() {}            "
"  45  48   }                                                "
"                                                            "
"  ▸ M Cargo.lock                          lockfile +1 −1    "
"  ▸ A tests/returns.rs                            new +1    "
" ────────────────────────────────────────────────────────── "
"  fold all                                    0 of 3 viewed "
