src/ui/snapshots/cornercase__ui__changes__tests__filter__draws_the_field_and_the_filtered_summary.snap
---
source: src/ui/changes.rs
expression: "render(&filtered(&sample(), \"returns.rs\"), None).backend()"
---
"  shop › issue-482   Every project                    ⌕  ×  "
"  Uncommitted   Commits   All                               "
"  ⌕ returns.rs                                           ×  "
" 2 of 3 files                                        ● live "
"                                                            "
" ▌▾ M src/returns.rs                               +5 −2    "
" ┄┄ impl Address ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"   9   9   /// The first line, when the address has one.    "
"  10     ▎ pub fn street(parts: &[String]) -> &str {        "
"  11     ▎     parts.first().unwrap()                       "
"      10 ▎ pub fn street(parts: &[String]) -> Option<&str>… "
"      11 ▎     parts.first().map(String::as_str)            "
"  12  12   }                                                "
"         ↕ 31 unchanged lines                               "
" ┄┄ mod tests ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ "
"  44  44       }                                            "
"      45 ▎                                                  "
"      46 ▎     #[test]                                      "
"      47 ▎     fn empty_address_is_rejected() {}            "
"  45  48   }                                                "
"                                                            "
"  ▸ A tests/returns.rs                            new +1    "
" ────────────────────────────────────────────────────────── "
"  fold all                                    0 of 3 viewed "
